--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     </template>
 
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/functions.js"></script>
 
 </body>
 </html>
